Changed action field on file upload from old path to heroku

--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
       </p>
 <form ref="uploadForm"
       id="uploadForm"
-      action="https://gaudy-devourer.glitch.me/upload"
+      action="https://znb-filemeta-microservice.herokuapp.com/upload"
       method="post"
       enctype="multipart/form-data">
         <input type="file" name="test" />
